updated the aesthetics of the page

--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -186,17 +186,7 @@
                         <th>CLIENT</th>
                         <th>AE</th>
                         <th>ACT LEAD</th>
-                        <th>SKILL SET</th>
-                        <th>MIN CONSULTANT GRADE</th>
-                        <th>MAX CONSULTANT GRADE</th>
-                        <th>RATE</th>
-                        <th>DATE</th>
-                        <th>DURATION</th>
-                        <th>HIRE CANDIDATES</th>
-                        <th>PROPOSED</th>
-                        <th>REJECTED</th>
-                        <th>ACCEPTED</th>
-                        <th>NOTES</th>
+                        <th>Details</th>
                     </tr>
 
 
@@ -213,17 +203,7 @@
                         <td> {{ post.ClientSubbusiness }}</td>
                         <td> {{ post.AEName }}</td>
                         <td> {{ post.ACTName }}</td>
-                        <td> {{ post.Skillset }}</td>
-                        <td> {{ post.MinConsultantGrade }}</td>
-                        <td> {{ post.MaxConsultantGrade }}</td>
-                        <td> {{ post.Rate }}</td>
-                        <td> {{ post.ExpectedStartDateString }}</td>
-                        <td> {{ post.Duration }}</td>
-                        <td> {{ post.HireCandidate }}</td>
-                        <td> {{ post.ProposedCandidate }}</td>
-                        <td> {{ post.RejectedCandidate }}</td>
-                        <td> {{ post.AcceptedCandidate }}</td>
-                        <td> {{ post.PositionNote }}</td>
+                        <td> + </td>
                     </tr>
                 </table>
             </template>
