--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
         <br /><br />
         <hr />
