added opportunity.js, opportunity.cshtml,

--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/clients/">Clients</a></li>
                 <li><a href="/positions/">Positions</a></li>
+                <li><a href="/opportunity/">Opportunities</a></li>
             </ul>
         </div>
     </div>
