cleaned up our project structure and cleaned up code

--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -1,31 +1,7 @@
-﻿<!---->
+﻿
     <div id="appContainer">
         <div id="app" class='main'>
             <h1>Practice Manager View</h1>
-            <!-- VUE'S LOGIC WILL DETERMINE WHICH BUTTON IS DISPLAYED.  EACH BUTTON IS LINKED TO A DIFFERENT METHOD ON THE VUE INSTANCE -->
-            <!---
-    <table class="clientView">
-
-        <tr v-if="newForm">
-            <td><input v-model="newPost.PositionId" type="text" /></td>
-            <td><input v-model="newPost.OpportunityId" type="text" /></td>
-            <td><input v-model="newPost.UnitPracticeId" type="text" /></td>
-            <td><input v-model="newPost.MaxConsultantGradeId" type="text" /></td>
-            <td><input v-model="newPost.MixConsultantGradeId" type="text" /></td>
-            <td><input v-model="newPost.PositionName" type="text" /></td>
-            <td><input v-model="newPost.NumberOfPositions" type="text" /></td>
-            <td><input v-model="newPost.Skillset" type="text" /></td>
-            <td><input v-model="newPost.Rate" type="text" /></td>
-            <td><input v-model="newPost.ExpectedStartDate" type="text" /></td>
-            <td><input v-model="newPost.Duration" type="text" /></td>
-            <td><input v-model="newPost.HireCandidate" type="text" /></td>
-            <td><input v-model="newPost.ProposedCandidate" type="text" /></td>
-            <td><input v-model="newPost.AcceptedCandidate" type="text" /></td>
-            <td><input v-model="newPost.RejectedCandidate" type="text" /></td>
-            <td><input v-model="newPost.PositionNote" type="text" /></td>
-        </tr>
-    </table>-->
-
             <div v-if="addState === false">
                 <button v-on:click="addState = true" class="btn btn-primary">
                     Add Opportunity
@@ -211,5 +187,5 @@
 
         </div>
     </div>
-    <script type="text/javascript" src="../../Scripts/App/Table/app.js"></script>
+    <script type="text/javascript" src="../../Scripts/App/Home/app.js"></script>
 
