--- a/SogetiStaffingPlanner/Views/Clients/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Clients/Index.cshtml
@@ -14,15 +14,15 @@
     </div>
     <template v-else>
         <div class="form-horizontal">
-            <label class="col-sm-3" for="ClientName">Client Name: </label>
+            <label class="col-sm-3" for="clientName">Client Name: </label>
             <div class="col-sm-4">
-                <input class="form-control" type="text" v-model="ClientName" />
+                <input class="form-control" type="text" v-model="clientName" />
             </div>
             <div class="form-group"></div>
 
-            <label class="col-sm-3" for="ClientSubbusiness">Client Subbusiness </label>
+            <label class="col-sm-3" for="clientSubbusiness">Client Subbusiness </label>
             <div class="col-sm-4">
-                <input class="form-control" type="text" v-model="ClientSubbusiness" />
+                <input class="form-control" type="text" v-model="clientSubbusiness" />
             </div>
 
             <div class="form-group"></div>
