--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                 <li><a href="/clients/">Clients</a></li>
                 <li><a href="/positions/">Positions</a></li>
                 <li><a href="/opportunity/">Opportunities</a></li>
+                <li><a href="/AccountExecutive/">AE</a></li>
+                <li><a href="/Unit/">Unit</a></li>
+                <li><a href="/Region/">Region</a></li>
             </ul>
         </div>
     </div>
