--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -10,6 +10,16 @@
 <body>
     <div id="opportunity" class="main">
         <h2>Opportunity List</h2>
+        <hr />
+        <template v-if="errors.length">
+            <p>
+                <b>Please correct the following error(s):</b>
+                <ul>
+                    <li v-for="error in errors" style="color: red;">{{ error }}</li>
+                </ul>
+            </p>
+        </template>
+
         <div v-if="addState === false">
             <button v-on:click="addState = true" class="btn btn-primary">
                 Add Opportunity
@@ -68,7 +78,7 @@
                 <div class="form-group"></div>
                 <div class="col-sm-offset-3 col-sm-6">
                     <button class="btn btn-primary" v-on:click="onSubmit">Add</button>
-                    <button class="btn btn-danger" v-on:click="addState = false">Cancel</button>
+                    <button class="btn btn-danger" v-on:click="cancel">Cancel</button>
                 </div>
                 <div class="form-group"></div>
             </div>
@@ -88,7 +98,9 @@
                     <td>{{ opportunity.active }}</td>
                     <td>{{ opportunity.clientId }}</td>
                     <td>{{ opportunity.clientContact }}</td>
-                    <td><button class="btn btn-info" v-on:click="onEdit(opportunity.opportunityName)">Edit</button></td>
+                    <td>
+                        <button class="btn btn-info" v-on:click="onEdit(opportunity.opportunityName)">Edit</button>
+                    </td>
                 </tr>
             </table>
         </template>
