87-A-Correct Naming Scheme- Changed Clients and PositionsController to singular, changed MainViewData to PracticeManagerData, and CLients and Positions views to singular and changed the link reference in shared.

--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
             <!--<span class='navTitle'>Staffing Planner</span>-->
             <ul class='navItems'>
                 <li><a href="/">Home</a></li>
-                <li><a href="/clients/">Clients</a></li>
-                <li><a href="/positions/">Positions</a></li>
-                <li><a href="/opportunity/">Opportunities</a></li>
+                <li><a href="/Client/">Clients</a></li>
+                <li><a href="/Position/">Positions</a></li>
+                <li><a href="/Opportunity/">Opportunities</a></li>
                 <li><a href="/AccountExecutive/">AE</a></li>
                 <li><a href="/Unit/">Unit</a></li>
                 <li><a href="/Region/">Region</a></li>
