--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -9,121 +9,145 @@
 </head>
 <body>
     <div id="opportunity" class="main">
-        <h2>Opportunity List</h2>
-        <hr />
-        <template v-if="errors.length">
-            <p>
-                <b>Please correct the following error(s):</b>
-                <ul>
-                    <li v-for="error in errors" style="color: red;">{{ error }}</li>
-                </ul>
-            </p>
-        </template>
-        <div v-if="addState === false">
-            <button v-on:click="addState = true" class="btn btn-primary">
-                Add Opportunity
-            </button>
-            <div class="form-group"></div>
-        </div>
-        <template v-else>
-
-            <div class="form-horizontal">
-                <div class="form-group"></div>
-                <label class="col-sm-3">Opportunity Name: </label>
-                <div class="col-sm-4">
-                    <input class="form-control" type="text" v-model="opportunityName" />
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Client: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="clientId">
-                        <option v-for="client in clients" :value="client.ClientId" class="form-control">
-                            {{ client.ClientName }}: {{ client.ClientSubbusiness }}
-                        </option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Client Contact: </label>
-                <div class="col-sm-4">
-                    <input class="form-control" type="text" v-model="clientContact" />
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Account Executive: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="accountExecutiveUserId">
-                        <option v-for="ae in aes" :value="ae.UserId">{{ ae.FullName }}</option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Unit: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="unitId">
-                        <option v-for="unit in units" :value="unit.UnitId">{{ unit.UnitName }}</option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Region: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="regionId">
-                        <option v-for="region in regions" :value="region.RegionId">{{ region.RegionName }}</option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Sold Status: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="soldStatusId">
-                        <option v-for="soldStatus in soldStatuses" :value="soldStatus.SoldStatusId">{{ soldStatus.SoldStatusName }}</option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3">Opportunity Owner: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="opportunityOwnerUserId">
-                        <option v-for="ACTLead in ACTLeads" :value="ACTLead.UserId">{{ ACTLead.FullName }}</option>
-                    </select>
-                </div>
-                <div class="form-group"></div>
-
-                <label class="col-sm-3">Opportunity Notes: </label>
-                <div class="col-sm-4">
-                    <textarea class="form-control" type="text" v-model="opportunityNotes">
-                    </textarea>
-                </div>
-                <div class="form-group"></div>
-                <div class="col-sm-offset-3 col-sm-6">
-                    <button class="btn btn-primary" v-on:click="onSubmit">{{ updateState ? 'Update' : 'Add'}}</button>
-                    <button class="btn btn-danger" v-on:click="clearForm">Cancel</button>
-                </div>
+        <div v-if="moreState === false">
+            <h2>Opportunity List</h2>
+            <hr />
+            <template v-if="errors.length">
+                <p>
+                    <b>Please correct the following error(s):</b>
+                    <ul>
+                        <li v-for="error in errors" style="color: red;">{{ error }}</li>
+                    </ul>
+                </p>
+            </template>
+            <div v-if="addState === false">
+                <button v-on:click="addState = true" class="btn btn-primary">
+                    Add Opportunity
+                </button>
                 <div class="form-group"></div>
             </div>
+            <template v-else>
 
-        </template>
-        <template>
-            <table>
-                <tr>
-                    <th>Opportunity Name</th>
-                    <th>Client</th>
-                    <th>AE</th>
-                    <th>Unit</th>
-                    <th>Client Contact</th>
-                    <th>Region</th>
-                    <th>Sold Status</th>
-                    <th>Opportunity Owner</th>
-                    <th></th>
-                </tr>
-                <tr v-for="opportunity in opportunities">
-                    <td>{{ opportunity.opportunityName }}</td>
-                    <td>{{ getClientName(opportunity.clientId) }}</td>
-                    <td>{{ getAEName(opportunity.accountExecutiveUserId) }}</td>
-                    <td>{{ getUnitName(opportunity.unitId) }}</td>
-                    <td>{{ opportunity.clientContact }}</td>
-                    <td>{{ getRegionName(opportunity.regionId) }}</td>
-                    <td>{{ getSoldStatus(opportunity.soldStatusId) }}</td>
-                    <td>{{ getOpportunityName(opportunity.opportunityOwnerUserId) }}</td>
-                    <td><button class="btn btn-info" v-on:click="onEdit(opportunity)">Edit</button></td>
-                </tr>
-            </table>
-        </template>
+                <div class="form-horizontal">
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Opportunity Name: </label>
+                    <div class="col-sm-4">
+                        <input class="form-control" type="text" v-model="opportunityName" />
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Client: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="clientId">
+                            <option v-for="client in clients" :value="client.ClientId" class="form-control">
+                                {{ client.ClientName }}: {{ client.ClientSubbusiness }}
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Client Contact: </label>
+                    <div class="col-sm-4">
+                        <input class="form-control" type="text" v-model="clientContact" />
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Account Executive: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="accountExecutiveUserId">
+                            <option v-for="ae in aes" :value="ae.UserId">{{ ae.FullName }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Unit: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="unitId">
+                            <option v-for="unit in units" :value="unit.UnitId">{{ unit.UnitName }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Region: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="regionId">
+                            <option v-for="region in regions" :value="region.RegionId">{{ region.RegionName }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Sold Status: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="soldStatusId">
+                            <option v-for="soldStatus in soldStatuses" :value="soldStatus.SoldStatusId">{{ soldStatus.SoldStatusName }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3">Opportunity Owner: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="opportunityOwnerUserId">
+                            <option v-for="ACTLead in ACTLeads" :value="ACTLead.UserId">{{ ACTLead.FullName }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"></div>
+
+                    <label class="col-sm-3">Opportunity Notes: </label>
+                    <div class="col-sm-4">
+                        <textarea class="form-control" type="text" v-model="opportunityNotes">
+                    </textarea>
+                    </div>
+                    <div class="form-group"></div>
+                    <div class="col-sm-offset-3 col-sm-6">
+                        <button class="btn btn-primary" v-on:click="onSubmit">{{ updateState ? 'Update' : 'Add'}}</button>
+                        <button class="btn btn-danger" v-on:click="clearForm">Cancel</button>
+                    </div>
+                    <div class="form-group"></div>
+                </div>
+
+            </template>
+            <template>
+                <table>
+                    <tr>
+                        <th>Opportunity Name</th>
+                        <th>Client</th>
+                        <th>AE</th>
+                        <th>Unit</th>
+                        <th>Client Contact</th>
+                        <th>Region</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr v-for="opportunity in opportunities">
+                        <td>{{ opportunity.opportunityName }}</td>
+                        <td>{{ getClientName(opportunity.clientId) }}</td>
+                        <td>{{ getAEName(opportunity.accountExecutiveUserId) }}</td>
+                        <td>{{ getUnitName(opportunity.unitId) }}</td>
+                        <td>{{ opportunity.clientContact }}</td>
+                        <td>{{ getRegionName(opportunity.regionId) }}</td>
+                        <td><button class="btn btn-info" v-on:click="onEdit(opportunity)">Edit</button></td>
+                        <td><button class="btn btn-warning" v-on:click="displayDetail(opportunity)">Details</button></td>
+                        <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
+                </table>
+            </template>
+        </div>
+
+            
+        <!-- DISPLAY DETAILED INFORMATION ABOUT POSITION -->
+        <template v-else>
+            <button class="btn btn-warning" v-on:click="opportunityDetail = false; moreState = false;">Back</button>
+            <h3>Opportunity Name: {{ this.opportunityDetail.opportunityName }}</h3>
+            
+            <h5>Client Name: {{ getClientName(this.opportunityDetail.clientId) }}</h5>
+            <h5>AE: {{ getAEName(this.opportunityDetail.accountExecutiveUserId) }}</h5>
+            <h5>Unit: {{ getUnitName(this.opportunityDetail.unitId) }}</h5>
+            <h5>Client Contact: {{ this.opportunityDetail.clientContact }}</h5>
+            <h5>Region: {{ getRegionName(this.opportunityDetail.regionId) }}</h5>
+            <h5>Sold Status: {{ getSoldStatus(this.opportunityDetail.soldStatusId) }}</h5>
+            <h5> Opportunity Owner: {{ getOpportunityName(this.opportunityDetail.opportunityOwnerUserId) }}</h5>
+            <h5>Last Modified Date: {{ this.opportunityDetail.lastModified }}</h5>
+            <h5>Last Modified By: {{ this.opportunityDetail.opportunityId }}</h5>
+            <h5>Active: {{ this.opportunityDetail.active }}</h5>
+
+
+            <h4>Notes:</h4>
+            <p>{{this.opportunityDetail.opportunityNotes}}</p>
+</template>
     </div>
 </body>
 </html>
