--- a/SogetiStaffingPlanner/Views/Position/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Position/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="col-sm-6">
                     <label class="col-sm-4" for="">Duration:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="text" v-model="duration" />
+                        <input class="form-control" type="number" v-model="duration" />
                     </div>
                 </div>
                 <div class="form-group"></div>
@@ -52,13 +52,13 @@
                 <div class="col-sm-6">
                     <label class="col-sm-4" for="">Rate:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="text" v-model="rate" />
+                        <input class="form-control" type="number" v-model="rate" />
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <label class="col-sm-4" for="">Expected Start Date:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="text" v-model="expectedStartDate" />
+                        <input class="form-control" type="date" v-on:change="getStartDate" v-model="expectedStartDate" />
                     </div>
                 </div>
                 <div class="form-group"></div>
@@ -95,7 +95,7 @@
                 <div class="col-sm-6">
                     <label class="col-sm-4" for="">Number of Positions:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="text" v-model="numberOfPositions" />
+                        <input class="form-control" type="number" v-model="numberOfPositions" />
                     </div>
                 </div>
                 <div class="col-sm-6">
