--- a/SogetiStaffingPlanner/Views/Positions/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Positions/Index.cshtml
@@ -22,6 +22,8 @@
                 <label class="col-sm-3" for="">Position Name: </label>
                 <div class="col-sm-4">
                     <input class="form-control" type="text" v-model="positionName" />
+                    <p>hi</p>
+                    <span class="has-error">{{ errors.positionName }}</span>
                 </div>
                 <div class="form-group"></div>
                 <label class="col-sm-3" for="">Duration:</label>
