Changes made font size

--- a/SogetiStaffingPlanner/Views/Position/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Position/Index.cshtml
@@ -173,7 +173,7 @@
                     <td>{{ position.AcceptedCandidate }}</td>
                     <td>{{ position.Skillset }}</td>
                     <td>{{ position.Rate }}</td>
-                    <td><button class="btn btn-info" v-on:click="onEdit(position)">Edit</button></td>
+                    <td><button class="btn btn-success" v-on:click="onEdit(position)">Edit</button></td>
                     <td><button class="btn btn-warning" v-on:click="displayDetail(position)">Details</button></td>
                     <td><button class="btn btn-danger">Delete</button></td>
 
