--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -119,7 +119,7 @@
                         <td>{{ getUnitName(opportunity.unitId) }}</td>
                         <td>{{ opportunity.clientContact }}</td>
                         <td>{{ getRegionName(opportunity.regionId) }}</td>
-                        <td><button class="btn btn-info" v-on:click="onEdit(opportunity)">Edit</button></td>
+                        <td><button class="btn btn-success" v-on:click="onEdit(opportunity)">Edit</button></td>
                         <td><button class="btn btn-warning" v-on:click="displayDetail(opportunity)">Details</button></td>
                         <td><button class="btn btn-danger">Delete</button></td>
                     </tr>
